--- a/dada/templates/admin_template.tmpl
+++ b/dada/templates/admin_template.tmpl
@@ -78,12 +78,12 @@
 
 </head>
  
- <body id="DadaAdmin">
-   <div id="Header">
+ <body id="Dada">
+   <div id="Dada_Header">
 	<a href="<!-- tmpl_var PROGRAM_URL -->">
 		<img src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/images/dada_mail_logo.png" alt="<!-- tmpl_var PROGRAM_NAME -->" />
     </a>
-	<span id="Title">
+	<span id="Dada_Title">
 		Logged in as
 		<!-- tmpl_if root_login --> 
 		 <strong><!-- tmpl_var PROGRAM_NAME --> Root</strong>
@@ -103,26 +103,26 @@
 		
     </span>
     <div class="floatclear"></div>
-  </div><!-- ends id="Header" -->
+  </div><!-- ends id="Dada_Header" -->
  
 
 
- <div id="AdminContentWrapper">
-   <div id="AdminContent">
+ <div id="Dada_AdminContentWrapper">
+   <div id="Dada_AdminContent">
 		<!-- tmpl_var content -->
-   </div><!-- ends id="AdminContent" -->
-  </div><!-- ends id="AdminContentWrapper" -->
+   </div><!-- ends id="Dada_AdminContent" -->
+  </div><!-- ends id="Dada_Dada_AdminContentWrapper" -->
    
 
- <div id="Menu">     
+ <div id="Dada_Menu">     
   <!-- tmpl_var admin_menu -->
- </div><!-- ends id="Menu" -->
+ </div><!-- ends id="Dada_Menu" -->
 
 
 
  
-	<div id="Footer">
-		<div id="FooterPadding">
+	<div id="Dada_Footer">
+		<div id="Dada_FooterPadding">
 			<p><!-- tmpl_var footer_props --></p>
 		</div>
 	</div> 
