--- a/dada/templates/list_template.tmpl
+++ b/dada/templates/list_template.tmpl
@@ -7,80 +7,55 @@
 	
 	<title><!-- tmpl_var title --></title>
 	
+	<!-- tmpl_include list_template_header_code_block.tmpl -->
 	
-
-	<!-- jQuery -->
-	<script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/jquery-1.8.2.min.js"></script>
-	<script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/jquery.validate.js"></script>
-	<script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/jquery.dadamail.js"></script>
-	<script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/dada_mail.user.js"></script>
-    <!-- tmpl_if comment --><script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js"></script><!-- /tmpl_if -->
-    <script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/jquery-ui-1.9.1.custom.min.js"></script>
-
-	<!-- tmpl_if load_colorbox --> 
-		<link rel="stylesheet" href="<!-- tmpl_var SUPPORT_FILES_URL -->/static/css/colorbox/colorbox.css">
-		<script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/colorbox/jquery.colorbox-min.js"></script>
-	<!-- /tmpl_if -->
-
-	
-	<link rel="stylesheet" href="<!-- tmpl_var SUPPORT_FILES_URL -->/static/css/jquery-ui-1.9.1.custom.min.css">
-	<link rel="stylesheet" href="<!-- tmpl_var SUPPORT_FILES_URL -->/static/css/dada_mail.css" type="text/css" media="screen" />
-    
-	<!-- tmpl_if list_settings.show_archives --> 
-		<!-- tmpl_if list_settings.publish_archives_rss --> 
-	 		<link rel="alternate" type="application/rss+xml"  title="RSS"  href="<!-- tmpl_var PROGRAM_URL -->/archive_rss/<!-- tmpl_var list_settings.list -->/" />
-	 		<link rel="alternate" type="application/atom+xml" title="Atom" href="<!-- tmpl_var PROGRAM_URL -->/archive_atom/<!-- tmpl_var list_settings.list -->/" />
-		<!-- /tmpl_if --> 
-	<!-- /tmpl_if --> 
-
  </head>
  
  <body id="Dada">
-  <div id="PageWrapper">
- 	<div id="Header">
-		<a href="<!-- tmpl_var PROGRAM_URL -->">
-			<img src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/images/dada_mail_logo.png" title="<!-- tmpl_var PROGRAM_NAME -->" alt="<!-- tmpl_var PROGRAM_NAME -->" />
-	    </a>
-			<!-- tmpl_if show_profile_widget --> 
-				<!-- tmpl_var profile_widget --> 
-			<!-- /tmpl_if --> 
-	    <div class="floatclear"></div>
-	  </div><!-- ends Header -->
-	
-	<div id="ContentWrapper">
-		<div id="Content">	
-			
-		<h1><!-- tmpl_var title --></h1>
-		<!-- tmpl_if list_settings.list --> 
-			<!-- tmpl_if subscribed_to_list --> 
-				<div class="clearskiesbox">
-					<p>
-						You are currently subscribed to, <!-- tmpl_var list_settings.list_name -->!
-					</p> 
-				</div> 
-			<!-- tmpl_else --> 
-			<!-- /tmpl_if -->
-		<!-- /tmpl_if -->
-		
-		
-	    <!-- tmpl_var content --> 
-		
-		
-		<!-- tmpl_if list_settings.website_name --> 
-			<!-- tmpl_if list_settings.website_url --> 
-				<p>
-			     Go back to 
-			       <a href="<!-- tmpl_var list_settings.website_url -->">
-				  		<!-- tmpl_var list_settings.website_name -->
-				   </a>
-			    </p>
-			<!-- /tmpl_if --> 
-		<!-- /tmpl_if -->
-		
-		</div><!-- ends Content -->
-	</div> <!-- ends ContentWrapper -->
+  <div id="Dada_PageWrapper">
+ 	<div id="Dada_Header">
+        	<a href="<!-- tmpl_var PROGRAM_URL -->">
+        		<img src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/images/dada_mail_logo.png" title="<!-- tmpl_var PROGRAM_NAME -->" alt="<!-- tmpl_var PROGRAM_NAME -->" />
+            </a>
+        		<!-- tmpl_if show_profile_widget --> 
+        			<!-- tmpl_var profile_widget --> 
+        		<!-- /tmpl_if --> 
+            <div class="floatclear"></div>
+          </div><!-- ends Header -->
 
-</div><!-- ends id="PageWrapper" -->
+        <div id="Dada_ContentWrapper">
+        	<div id="Dada_Content">	
+
+        	<h1><!-- tmpl_var title --></h1>
+        	<!-- tmpl_if list_settings.list --> 
+        		<!-- tmpl_if subscribed_to_list --> 
+        			<div class="clearskiesbox">
+        				<p>
+        					You are currently subscribed to, <!-- tmpl_var list_settings.list_name -->!
+        				</p> 
+        			</div> 
+        		<!-- tmpl_else --> 
+        		<!-- /tmpl_if -->
+        	<!-- /tmpl_if -->
+
+
+            <!-- tmpl_var content --> 
+
+
+        	<!-- tmpl_if list_settings.website_name --> 
+        		<!-- tmpl_if list_settings.website_url --> 
+        			<p>
+        		     Go back to 
+        		       <a href="<!-- tmpl_var list_settings.website_url -->">
+        			  		<!-- tmpl_var list_settings.website_name -->
+        			   </a>
+        		    </p>
+        		<!-- /tmpl_if --> 
+        	<!-- /tmpl_if -->
+
+        	</div><!-- ends Content -->
+        </div> <!-- ends Dada_ContentWrapper -->
+</div><!-- ends id="Dada_PageWrapper" -->
 
 <div id="Footer">
 	<div id="FooterPadding">
