--- a/dada/templates/delete_email_screen_filtered.tmpl
+++ b/dada/templates/delete_email_screen_filtered.tmpl
@@ -63,12 +63,12 @@ Remove
 	</legend>
 	
 	<p>
-	 These addresses are not part of your <!-- tmpl_var type_title --> currently.
+	 These addresses are not part of your <!-- tmpl_var type_title --> currently:
 	</p>
 	
 	<ul>
 	 
-	<!-- tmpl_loop name="not_subscribed_addresses" -->
+	<!-- tmpl_loop not_subscribed_addresses -->
 		 
 		 <li>
 		  <p>
