--- a/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
+++ b/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
@@ -1161,7 +1161,7 @@ editors also have the ability to make simple HTML tables for basic layouts.
            
                     <input type="text" name="template_options_magic_template_url" id="template_options_magic_template_url" class="full" /><br />
            
-                    <input type="checkbox" name="template_options_add_base_href" id="template_options_add_base_href" />
+                    <input type="checkbox" name="template_options_add_base_href" id="template_options_add_base_href" value="1" />
                     <label for="template_options_add_base_href">Add a, &lt;base href=&quot;...&quot;&gt; tag:</label><br />
                     <input type="text" name="template_options_base_href_url" id="template_options_base_href_url"  class="full" /><br />
              
