--- a/dada/templates/list_template_body_code_block.tmpl
+++ b/dada/templates/list_template_body_code_block.tmpl
@@ -30,3 +30,10 @@
 		<!-- /tmpl_if --> 
 	<!-- /tmpl_if -->
 	
+
+	<div id="FooterPadding">
+	    <div id="Footer">
+		    <p><!-- tmpl_var footer_props --></p>
+        </div> 
+	</div>
+  
