--- a/dada/templates/profile_widget.tmpl
+++ b/dada/templates/profile_widget.tmpl
@@ -1,6 +1,6 @@
 <!-- begin profile_widget.tmpl --> 
 
-<span id="Dada_Title">
+<span id="Title">
 
 <!-- tmpl_if profiles_enabled --> 
 	<!-- tmpl_if is_logged_in --> 
