--- a/dada/templates/list_template.tmpl
+++ b/dada/templates/list_template.tmpl
@@ -12,8 +12,8 @@
  </head>
  
  <body id="Dada">
-  <div id="Dada_PageWrapper">
- 	<div id="Dada_Header">
+  <div id="PageWrapper">
+ 	<div id="Header">
         	<a href="<!-- tmpl_var PROGRAM_URL -->">
         		<img src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/images/dada_mail_logo.png" title="<!-- tmpl_var PROGRAM_NAME -->" alt="<!-- tmpl_var PROGRAM_NAME -->" />
             </a>
@@ -23,8 +23,8 @@
             <div class="floatclear"></div>
           </div><!-- ends Header -->
 
-        <div id="Dada_ContentWrapper">
-        	<div id="Dada_Content">	
+        <div id="ContentWrapper">
+        	<div id="Content">	
 
         	<h1><!-- tmpl_var title --></h1>
         	<!-- tmpl_if list_settings.list --> 
@@ -54,12 +54,14 @@
         	<!-- /tmpl_if -->
 
         	</div><!-- ends Content -->
-        </div> <!-- ends Dada_ContentWrapper -->
-</div><!-- ends id="Dada_PageWrapper" -->
+        </div> <!-- ends ContentWrapper -->
+</div><!-- ends id="PageWrapper" -->
 
-<div id="Footer">
+<div id="FooterWrapper">
 	<div id="FooterPadding">
-		<p><!-- tmpl_var footer_props --></p>
+	    <div id="Footer">
+		    <p><!-- tmpl_var footer_props --></p>
+        </div> 
 	</div>
 </div>
 	
