--- a/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
+++ b/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
@@ -1125,8 +1125,8 @@ editors also have the ability to make simple HTML tables for basic layouts.
 	<div id="templates_options">
 	<fieldset> 
 		<p>
-			<input type="checkbox" name="configure_user_template" id="configure_user_template" value="1" />			
-			<label for="configure_user_template">
+			<input type="checkbox" name="template_options_enabled" id="template_options_enabled" value="1" />			
+			<label for="template_options_enabled">
 				Use A Custom User Template
 			</label>
 		</p>		
