Setting Magically as, "Experimental"

--- a/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
+++ b/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
@@ -1149,7 +1149,7 @@ editors also have the ability to make simple HTML tables for basic layouts.
 		    <p>
     		    <input type="radio" name="template_options_mode" value="magic" id="template_options_mode_magic" class="template_options_mode" />
 		        <label for="template_options_mode_magic">
-		            Magically
+		            Magically (Experimental)
 		        </label>
 	        </p>
 	        
