--- a/dada/templates/recurring_schedules_test.tmpl
+++ b/dada/templates/recurring_schedules_test.tmpl
@@ -17,3 +17,14 @@
     
 <p>recurring_datetime_end: <!-- tmpl_var recurring_datetime_end -->
 
+
+<ul> 
+
+<!-- tmpl_loop dates --> 
+    <li>
+        <!-- tmpl_var date -->, <!-- tmpl_var ctime -->
+    </li> 
+<!-- /tmpl_loop --> 
+
+</ul>    
+    
