--- a/dada/templates/recurring_schedules.tmpl
+++ b/dada/templates/recurring_schedules.tmpl
@@ -7,22 +7,6 @@
     <input type="hidden" name="flavor"  id="flavor" value="recurring_schedules" /> 
     <input type="hidden" name="process" id="process" value="1" /> 
     
-    <p> Every
-    <label for="sun">Sun:</label><input type="checkbox" name="recurring_day" id="sun" value="0" /> 
-    <label for="mon">Mon:</label><input type="checkbox" name="recurring_day" id="mon" value="1" /> 
-    <label for="tue">Tue:</label><input type="checkbox" name="recurring_day" id="tue" value="2" /> 
-    <label for="wed">Wed:</label><input type="checkbox" name="recurring_day" id="wed" value="3" /> 
-    <label for="thu">Thu:</label><input type="checkbox" name="recurring_day" id="thu" value="4" /> 
-    <label for="fri">Fri:</label><input type="checkbox" name="recurring_day" id="fri" value="5" /> 
-    <label for="sat">Sat:</label><input type="checkbox" name="recurring_day" id="sat" value="6" /> 
-    </p>
-    <p>
-    <label for="recurring_datetime_time">
-        At: 
-    </label>
-    <input type="text" name="recurring_datetime_time" id="recurring_datetime_time" />
-    </p> 
-
     <p>
     <label for="recurring_datetime_start">
         Starting on: 
@@ -36,6 +20,24 @@
     </label>
     <input type="text" name="recurring_datetime_end" id="recurring_datetime_end" />
     </p> 
+
+    <p> Every
+    <label for="mon">Mon:</label><input type="checkbox" name="recurring_day" id="mon" value="1" /> |
+    <label for="tue">Tue:</label><input type="checkbox" name="recurring_day" id="tue" value="2" /> | 
+    <label for="wed">Wed:</label><input type="checkbox" name="recurring_day" id="wed" value="3" /> | 
+    <label for="thu">Thu:</label><input type="checkbox" name="recurring_day" id="thu" value="4" /> | 
+    <label for="fri">Fri:</label><input type="checkbox" name="recurring_day" id="fri" value="5" /> | 
+    <label for="sat">Sat:</label><input type="checkbox" name="recurring_day" id="sat" value="6" /> | 
+    <label for="sun">Sun:</label><input type="checkbox" name="recurring_day" id="sun" value="7" /> 
+    </p>
+
+    <p>
+    <label for="recurring_datetime_time">
+        At: 
+    </label>
+    <input type="text" name="recurring_datetime_time" id="recurring_datetime_time" />
+    </p> 
+
 
     <p>
         <input type="button" id="try_recurring" value="Go go go!" />
